fixed horizontal scroll visit

--- a/CSS/get-involved.css
+++ b/CSS/get-involved.css
@@ -82,7 +82,7 @@
   }
   .get-involved--container {
     margin-top: var(--margin-top-mobile);
-    padding: 30px 26px;
+    padding: 30px 20px;
   }
 
   /* TEXT PHONE */
