--- a/CSS/style.css
+++ b/CSS/style.css
@@ -450,10 +450,11 @@ footer p {
     font-size: 17.5px;
     margin-right: 7px;
     margin-bottom: 10px;
+    letter-spacing: 1.5px;
   }
   .main-home--container h1 {
     font-size: 39px;
-    padding: 0 27px 0 33px;
+    padding: 0 27px 0 36px;
   }
   h1 {
     font-size: 29px;
@@ -499,7 +500,7 @@ footer p {
   /* BUTTONS PHONE */
   .main-home--buttons {
     align-items: stretch;
-    padding: 0 46px 0 39px;
+    padding: 0 43px 0 42px;
   }
   .main-home--buttons .button-1 a,
   .main-home--buttons .button-2 a {
@@ -538,7 +539,7 @@ footer p {
   }
   /* IMAGE PHONE*/
   .header--image-wraper {
-    height: 30px;
+    height: 45px;
     margin-right: 10px;
   }
   .image {
